--- a/testing-vu.csproj
+++ b/testing-vu.csproj
@@ -9,6 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+      <PackageReference Include="NUnit" Version="4.3.2" />
+      <PackageReference Include="NunitXml.TestLogger" Version="6.0.0" />
       <PackageReference Include="Selenium.Support" Version="4.28.0" />
       <PackageReference Include="Selenium.WebDriver" Version="4.28.0" />
     </ItemGroup>
